added example plugin stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,5 @@ serverlibe_version=beta.1
 
 # Mod
 mod_version=1.0.0
-mod_group=unknown
-mod_name=templateplugin
+mod_group=useless
+mod_name=example
